Run formatter Remove obsolet comment in WorkflowExecutorRunnable. Set JDK21 in Project Run configurations.